--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -13,7 +13,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     </h:head>
 
-    <h:body>
+    <h:body class="container">
         <ui:insert name="content" />
     </h:body>
 </html>
