fix: JSF links optimized

--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -17,12 +17,12 @@
     <h:body>
         <nav>
             <div class="nav-wrapper container">
-                <h:link outcome="/faces/index" value="SupCooking" styleClass="brand-logo center" />
+                <h:link outcome="/index" value="SupCooking" styleClass="brand-logo center" />
                 <ul class="left hide-on-med-and-down">
                     <!--TODO: add navigation links here-->
                 </ul>
                 <ul class="right hide-on-med-and-down">
-                    <li><h:link outcome="/faces/login" value="Login" /></li>
+                    <li><h:link outcome="/login" value="Login" /></li>
                 </ul>
             </div>
         </nav>
