change: minor pages modifications
change: pages main content now takes all the available space

--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -27,7 +27,7 @@
             </div>
         </nav>
             
-        <main class="container">
+        <main>
             <ui:insert name="content" />
         </main>
             
