add: session mechanism

--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets">
-          
+        
     <h:head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <title><ui:insert name="title" /></title>
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
     </h:head>
-        
+    
     <h:body>
         <nav>
             <div class="nav-wrapper container">
@@ -22,15 +22,17 @@
                     <!--TODO: add navigation links here-->
                 </ul>
                 <ul class="right hide-on-med-and-down">
+                    <li><h:link outcome="/member/dashboard" value="Dashboard" /></li>
                     <li><h:link outcome="/login" value="Login" /></li>
+                    <li><h:form><h:commandLink action="#{userController.logout}" value="Logout" /></h:form></li>
                 </ul>
             </div>
         </nav>
-            
+        
         <main>
             <ui:insert name="content" />
         </main>
-            
+        
         <footer class="page-footer">
             <div class="container">
                 <div class="row">
