--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -2,7 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
         
     <h:head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -21,9 +22,13 @@
                     <!--TODO: add navigation links here-->
                 </ul>
                 <ul class="right hide-on-med-and-down">
-                    <li><h:link outcome="/member/dashboard" value="Dashboard" /></li>
-                    <li><h:link outcome="/login" value="Login" /></li>
-                    <li><h:form><h:commandLink action="#{userController.logout}" value="Logout" /></h:form></li>
+                    <c:if test="#{userController.userLoggedIn}">
+                        <li><h:link outcome="/member/dashboard" value="Dashboard" /></li>
+                        <li><h:form><h:commandLink action="#{userController.logout}" value="Logout" /></h:form></li>
+                    </c:if>
+                    <c:if test="#{!userController.userLoggedIn}">
+                        <li><h:link outcome="/login" value="Login" /></li>
+                    </c:if>
                 </ul>
             </div>
         </nav>
