add: registration page and mechnaism
fix: user entity properties

--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -27,6 +27,7 @@
                         <li><h:form><h:commandLink action="#{userController.logout}" value="Logout" /></h:form></li>
                     </c:if>
                     <c:if test="#{!userController.userLoggedIn}">
+                        <li><h:link outcome="/register" value="Register" /></li>
                         <li><h:link outcome="/login" value="Login" /></li>
                     </c:if>
                 </ul>
