Add database seeding link

--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -48,7 +48,7 @@
                     <div class="col l4 offset-l2 s12">
                         <h5 class="white-text">Links</h5>
                         <ul>
-                            <!--TODO: add quick access links here-->
+                            <li><h:form><h:commandLink action="#{debugController.seedDatabase()}" value="Seed Database" /></h:form></li>
                         </ul>
                     </div>
                 </div>
