add: search and pagination in index page
change: refactored some controllers and recipe code

--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -41,20 +41,13 @@
         <footer class="page-footer">
             <div class="container">
                 <div class="row">
-                    <div class="col l6 s12">
-                        <h5 class="white-text">SuppCooking</h5>
-                        <p class="grey-text text-lighten-4">Share delicious recipes with gourmets all arround the world!</p>
-                    </div>
-                    <div class="col l4 offset-l2 s12">
-                        <h5 class="white-text">Links</h5>
-                        <ul>
-                            <!--TODO: add quick access links here-->
-                        </ul>
+                    <div class="col s12">
+                        <h5 class="white-text center-align">SuppCooking</h5>
                     </div>
                 </div>
             </div>
             <div class="footer-copyright">
-                <div class="container">
+                <div class="container center-align">
                     © 2018 SUPINFO International University
                 </div>
             </div>
