--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -15,7 +15,7 @@
     </h:head>
     
     <h:body>
-        <nav>
+        <nav class="amber">
             <div class="nav-wrapper container">
                 <h:link outcome="/index" value="SupCooking" styleClass="brand-logo center" />
                 <ul class="left hide-on-med-and-down">
@@ -38,7 +38,7 @@
             <ui:insert name="content" />
         </main>
         
-        <footer class="page-footer">
+        <footer class="page-footer amber">
             <div class="container">
                 <div class="row">
                     <div class="col s12">
