change: navbar and footer color

--- a/SupCooking-war/web/templates/materialize-page.xhtml
+++ b/SupCooking-war/web/templates/materialize-page.xhtml
@@ -16,7 +16,7 @@
     </h:head>
     
     <h:body>
-        <nav class="amber">
+        <nav class="green">
             <div class="nav-wrapper container">
                 <h:link outcome="/index" value="SupCooking" styleClass="brand-logo center" />
                 <ul class="left hide-on-med-and-down">
@@ -39,7 +39,7 @@
             <ui:insert name="content" />
         </main>
         
-        <footer class="page-footer amber">
+        <footer class="page-footer green">
             <div class="container">
                 <div class="row">
                     <div class="col s12">
